--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,6 +1,5 @@
 .Homepage {
-  padding-left: 100px;
-  border: 2px solid red;
+  width: 80%;
 }
 
 .Homepage-title {
@@ -8,4 +7,5 @@
   border-radius: 10px;
   padding: 10px;
   width: fit-content;
+  margin: auto;
 }
