--- a/src/PostListCard.css
+++ b/src/PostListCard.css
@@ -1,6 +1,7 @@
 .PostListCard {
   border: 1px solid lightgray;
   border-radius: 5px;
-  width: 300px;
+  width: 200px;
   padding: 15px;
+  margin: 10px;
 }
