changed positioning of elements in the homepage

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 .Header {
-  background-color: #e8ecef;
+  background-color: rgba(245, 245, 245);
   padding: 50px 20px 50px 30px;
   border-radius: 0px 0px 10px 10px;
 }
 
 .Header-title {
     font-family: 'Noto Sans JP', sans-serif;
-
 }
 
 .Header-description {
@@ -17,7 +16,7 @@
 }
 
 .Header > a {
-  margin: 10px 10px 10px 0px;
+  margin: 10px 30px 10px 0px;
 }
 
 .Header a.active {
