--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,4 +1,5 @@
 
+
 .Homepage-title {
   margin: 30px 0px 0px 50px;
 }
@@ -7,3 +8,7 @@
   margin: 20px 0px 30px 50px;
 }
 
+.Homepage-container {
+  display: flex;
+  border: royalblue 2px solid;
+}
