--- a/src/PostList.css
+++ b/src/PostList.css
@@ -1,8 +1,16 @@
 .PostList {
+  width: 80%;
+}
+
+.PostList-list {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 80%;
+ 
+}
+
+.PostList-title {
+  margin: 0px 50px;
+  font-weight: lighter;
 }
 
