--- a/src/TopPostsList.css
+++ b/src/TopPostsList.css
@@ -1,8 +1,8 @@
 .TopPostsList {
-  border: pink solid 2px;
-  width: 20%;
+  width: 25%;
 }
 
 .TopPostsList-list-title {
-  margin: 5%;
+  font-weight: lighter;
+  margin: 0% 5% 6% 5%;
 }
