--- a/src/PostListCard.css
+++ b/src/PostListCard.css
@@ -5,3 +5,21 @@
   padding: 15px;
   margin: 10px;
 }
+
+@media screen and (max-width: 450px) {
+  .PostListCard {
+    width: 100px;
+    height: 300px;
+    padding: 10px;
+    margin: 3px 3px 3px 0px;
+  }
+
+  .PostListCard > a {
+    font-size: 0.9rem;
+    word-wrap: break-word;
+  }
+
+  .PostListCard > p {
+    font-size: 0.7rem;
+  }
+}
