--- a/src/TopPostsList.css
+++ b/src/TopPostsList.css
@@ -1,8 +1,14 @@
 .TopPostsList {
-  width: 25%;
+  width: 40%;
 }
 
 .TopPostsList-list-title {
   font-weight: lighter;
   margin: 0% 5% 6% 5%;
+}
+
+@media screen and (max-width: 450px) {
+  .TopPostsList-list-title {
+    font-size: 1.4rem;
+  }
 }
